--- a/juego_adivinacion.html
+++ b/juego_adivinacion.html
@@ -27,7 +27,7 @@
         if (numeroPensado == numeroLanzado){
             imprimir("Usted adivinó correctamente, el número lanzado es " + numeroLanzado + " !!")
         }
-        else if (numeroPensado != numeroLanzado){
+        else (numeroPensado != numeroLanzado){
             imprimir("Le deseamos suerte para la proxima ocasión, el numero lanzado es " + numeroLanzado)
         }
     </script>
